# design-guard-ai

./: README.md  pyproject.toml
src/design_guard_ai/: __init__.py  ai_utils.py  api_client.py  cli.py  const.py  converter.py  knowledge_service.py  main.py  models.py  pdf_analyzer.py  qa_service.py  utils.py
